# emm

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  docker-compose.yaml  pyproject.toml
docker/: Dockerfile
docker/flask/: Dockerfile
sql/project_emm/: schemas.sql
sql/raf_emm/: schemas.sql
src/: cli.py
src/emm/config/: config.py  docker.env.example
src/emm/engine/: data.py  parser.py
src/emm/engine/tests/: test_parser.py
src/emm/models/: database_base.py  performance.py  schema.py
src/emm/operations/: constants.py  perfomances.py  permutations.py  population.py  schemas.py  validators.py
