[tool.poetry]
name = "emm"
version = "0.1.0"
description = "Evaluate the possible performance increase due to better alignment of tables."
authors = ["rafspiny <rafspiny@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
pglast = "^6.2"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.30"
sqlparse = "^0.5.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
click = "^8.1.7"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
